--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -32,8 +32,8 @@ workflows:
         - name: Run iOS test
           script: | 
             xcode-project run-tests \
-              --project MyAwesomeApp.xcworkspace \
-              --scheme MyAwesomeApp \
+              --project MobileShop.xcworkspace \
+              --scheme MobileShop \
               --device "iPhone 15"
           test_report: build/ios/test/*.xml
       artifacts:
