--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,6 +18,14 @@ workflows:
       scripts:
         - name: say hello
           script: echo "Hello Codemagician!"
+      scripts:
+        - name: Run Snapshot Tests
+          script: |
+          xcodebuild test \
+            -workspace "$XCODE_WORKSPACE" \
+            -scheme "$XCODE_SCHEME" \
+            -destination "platform=iOS Simulator,name=iPhone 16 Pro,OS=18.2" \
+            -only-testing:CartSnapshotTests
 #        - name: Codemagic CLI Tools build
 #          script: pip3 install codemagic-cli-tools # The Codemagic CLI tools are already installed on Codemagic servers
 #        - name: Initialize Pods 
