--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,10 +21,10 @@ workflows:
         - name: Run Snapshot Tests
           script: |
             xcodebuild test \
-              --project MobileShop.xcodeproj\
-              --scheme MobileShop \
-              --destination "platform=iOS Simulator,name=iPhone 16 Pro,OS=18.2" \
-              --only-testing:CartSnapshotTests
+              -project "MobileShop.xcodeproj" \
+              -scheme MobileShop \
+              -destination "platform=iOS Simulator,name=iPhone 16 Pro,OS=18.2" \
+              -only-testing:CartSnapshotTests
 #        - name: Codemagic CLI Tools build
 #          script: pip3 install codemagic-cli-tools # The Codemagic CLI tools are already installed on Codemagic servers
 #        - name: Initialize Pods 
