--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -19,26 +19,14 @@ workflows:
         - name: say hello
           script: echo "Hello Codemagician!"
         - name: Run Snapshot Tests
+          scripts:
+        - name: Run Tests
           script: |
+            set -e # exit on first failed command
             xcodebuild test \
-              -project "MobileShop.xcodeproj" \
+              -project MobileShop.xcodeproj \
               -scheme MobileShop \
-              -destination "platform=iOS Simulator,name=iPhone 16 Pro,OS=18.2" \
-#        - name: Codemagic CLI Tools build
-#          script: pip3 install codemagic-cli-tools # The Codemagic CLI tools are already installed on Codemagic servers
-#        - name: Initialize Pods 
-#          script: pod init && pod install
-#        - name: Set up provisioning profiles settings on Xcode project
-#          script: xcode-project use-profiles
-#        - name: Increment build number
-#         script: agvtool new-version -all $(($(app-store-connect get-latest-build-number "$APP_STORE_APPLE_ID") + 1))
-#       - name: Create archive
-#          script: xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME" --archive-xcargs "CODE_SIGN_STYLE=Manual DEVELOPMENT_TEAM=" --archive-flags "-destination 'generic/platform=iOS' CODE_SIGNING_REQUIRED=YES CODE_SIGNING_ALLOWED=NO"
-        - name: Run iOS test
-          script: | 
-            xcode-project run-tests \
-              --project MobileShop.xcodeproj\
-              --scheme MobileShop \
+              -destination "platform=iOS Simulator,name=iPhone 16 Pro,OS=18.2"
           test_report: build/ios/test/*.xml
       publishing:           
          email:
